--- a/app/components/Button/Button.module.css
+++ b/app/components/Button/Button.module.css
@@ -1,7 +1,7 @@
 .shadow {
-    box-shadow: 0px 0.55rem 20px 0px rgb(7, 15, 19);
+    box-shadow: 0 0.20rem 0.50rem  #006cc5;
 }
 
 .shadow:active {
-    box-shadow: 0px -0.80rem 5px 2px rgb(43, 77, 105) inset;
+    box-shadow: none;
 }
